Rename loki to odin, heavily update README, remove celery

--- a/etc/development.ini
+++ b/etc/development.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:loki
+use = egg:odin
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
@@ -14,7 +14,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar pyramid_jinja2 cornice pyramid_celery
 
-sqlalchemy.url = sqlite:///%(here)s/../loki.sqlite
+sqlalchemy.url = sqlite:///%(here)s/../odin.sqlite
 
 retry.attempts = 3
 
@@ -26,14 +26,14 @@ retry.attempts = 3
 # celery configuration
 ###
 
-[celery]
-BROKER_URL = amqp://guest:guest@localhost:5672//
-CELERY_IMPORTS = loki.tasks
+#[celery]
+#BROKER_URL = amqp://guest:guest@localhost:5672//
+#CELERY_IMPORTS = odin.tasks
 
-[logger_celery]
-level = INFO
-handlers =
-qualname = celery
+#[logger_celery]
+#level = INFO
+#handlers =
+#qualname = celery
 
 ###
 # wsgi server configuration
@@ -49,7 +49,7 @@ listen = localhost:6543
 ###
 
 [loggers]
-keys = root, loki, sqlalchemy
+keys = root, odin, sqlalchemy
 
 [handlers]
 keys = console
@@ -61,10 +61,10 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_loki]
+[logger_odin]
 level = DEBUG
 handlers =
-qualname = loki
+qualname = odin
 
 [logger_sqlalchemy]
 level = INFO
