--- a/etc/production.ini
+++ b/etc/production.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:loki
+use = egg:odin
 
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
@@ -12,7 +12,7 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
-sqlalchemy.url = sqlite:///%(here)s/loki.sqlite
+sqlalchemy.url = sqlite:///%(here)s/odin.sqlite
 
 retry.attempts = 3
 
@@ -30,7 +30,7 @@ listen = *:6543
 ###
 
 [loggers]
-keys = root, loki, sqlalchemy
+keys = root, odin, sqlalchemy
 
 [handlers]
 keys = console
@@ -42,10 +42,10 @@ keys = generic
 level = WARN
 handlers = console
 
-[logger_loki]
+[logger_odin]
 level = WARN
 handlers =
-qualname = loki
+qualname = odin
 
 [logger_sqlalchemy]
 level = WARN
