Actually remove celery

--- a/etc/development.ini
+++ b/etc/development.ini
@@ -12,7 +12,7 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
-    pyramid_debugtoolbar pyramid_jinja2 cornice pyramid_celery
+    pyramid_debugtoolbar pyramid_jinja2 cornice
 
 sqlalchemy.url = sqlite:///%(here)s/../odin.sqlite
 
@@ -21,19 +21,6 @@ retry.attempts = 3
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
-
-###
-# celery configuration
-###
-
-#[celery]
-#BROKER_URL = amqp://guest:guest@localhost:5672//
-#CELERY_IMPORTS = odin.tasks
-
-#[logger_celery]
-#level = INFO
-#handlers =
-#qualname = celery
 
 ###
 # wsgi server configuration
